// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Breadcrumb Advanced Breadcrumbs with options per data item 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        className="css-jayjlm-Breadcrumb"
      >
        <li>
          <div
            className="css-1fgfgne-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/first-level"
              onClick={[Function]}
            >
              First Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li
          role="listitem"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            className="css-1w7gjlo-BreadcrumbCollapsed"
          >
            <span
              className="css-hjigrk-BreadcrumbCollapsed"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-il5cqq-Icon"
                />
              </span>
            </span>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1fgfgne-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/forth-level"
              onClick={[Function]}
            >
              Forth Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1jaqcwz-BreadcrumbItem"
          >
            <div
              role="button"
            >
              <div
                className="css-6mpaj4-Menu"
              >
                <button
                  className="css-1rg7573-Button"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="css-1xr6sam-Button"
                  >
                    <span
                      className="css-uao30q-Button"
                    >
                      <span>
                        Fifth Level
                      </span>
                    </span>
                    <span
                      className="css-1kner5m-Button"
                    >
                      <span
                        className="css-1gnbc76-Icon"
                        onClick={[Function]}
                      >
                        <span
                          className="css-1r432t2-Icon"
                        />
                      </span>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Breadcrumb showcase 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <button
          onClick={[Function]}
          type="button"
        >
          Add data to Breadcrumb
        </button>
        <ol
          aria-label="Breadcrumb"
          className="css-jayjlm-Breadcrumb"
        >
          <li>
            <div
              className="css-1fgfgne-BreadcrumbItem"
            >
              <a
                className="css-kllbug"
                href="/first-level"
                onClick={[Function]}
              >
                First Level
              </a>
              <span
                className="css-x63yja-Separator"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-196hwjy-Icon"
                  />
                </span>
              </span>
            </div>
          </li>
          <li
            role="listitem"
            style={
              Object {
                "margin": "auto",
              }
            }
          >
            <div
              className="css-1w7gjlo-BreadcrumbCollapsed"
            >
              <span
                className="css-hjigrk-BreadcrumbCollapsed"
                onClick={[Function]}
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-il5cqq-Icon"
                  />
                </span>
              </span>
              <span
                className="css-x63yja-Separator"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-196hwjy-Icon"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="css-1fgfgne-BreadcrumbItem"
            >
              <a
                className="css-kllbug"
                href="/forth-level"
                onClick={[Function]}
              >
                Forth Level
              </a>
              <span
                className="css-x63yja-Separator"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-196hwjy-Icon"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="css-1jaqcwz-BreadcrumbItem"
            >
              <div
                role="button"
              >
                <div
                  className="css-6mpaj4-Menu"
                >
                  <button
                    className="css-1rg7573-Button"
                    data-testid="button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="css-1xr6sam-Button"
                    >
                      <span
                        className="css-uao30q-Button"
                      >
                        <span>
                          Fifth Level
                        </span>
                      </span>
                      <span
                        className="css-1kner5m-Button"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-1r432t2-Icon"
                          />
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        className="css-jayjlm-Breadcrumb"
      >
        <li>
          <div
            className="css-1fgfgne-BreadcrumbItem"
          >
            <div>
              First Level
            </div>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1fgfgne-BreadcrumbItem"
          >
            <div>
              Second Level
            </div>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1jaqcwz-BreadcrumbItem"
          >
            <div>
              Third Level
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs with options 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <ol
        aria-label="Breadcrumb"
        className="css-jayjlm-Breadcrumb"
      >
        <li>
          <div
            className="css-1fgfgne-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/first-level"
              onClick={[Function]}
            >
              First Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li
          role="listitem"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            className="css-1w7gjlo-BreadcrumbCollapsed"
          >
            <span
              className="css-hjigrk-BreadcrumbCollapsed"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-il5cqq-Icon"
                />
              </span>
            </span>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1fgfgne-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/forth-level"
              onClick={[Function]}
            >
              Forth Level
            </a>
            <span
              className="css-x63yja-Separator"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-196hwjy-Icon"
                />
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="css-1jaqcwz-BreadcrumbItem"
          >
            <a
              className="css-kllbug"
              href="/fifth-level"
              onClick={[Function]}
            >
              Fifth Level
            </a>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
